--- a/node/package.json
+++ b/node/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "node-rtsp-stream": "^0.0.9"
   }
 }
